--- a/styles/registration,sign_in.css
+++ b/styles/registration,sign_in.css
@@ -19,6 +19,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    z-index: 10000;
 }
 
 
