--- a/styles/search.css
+++ b/styles/search.css
@@ -117,6 +117,7 @@ nav {
     width: 100%;
     background-color: #B68973;
     position: fixed;
+    z-index: 10000;
 }
 
 
