--- a/styles/submission.css
+++ b/styles/submission.css
@@ -71,6 +71,7 @@ nav {
     width: 100%;
     background-color: #B68973;
     position: fixed;
+    z-index: 10000;
 }
 
 
